correction in progress

--- a/copyright.tex
+++ b/copyright.tex
@@ -5,6 +5,7 @@
 
 \noindent
 {\rm Prepared by Editorial Committe}\\
+{\rm Executive Director : Dr. Nandish Hanche}\\
 {\rm Published by JSS Granthamale, Mysuru}\\[8pt]
 {\rm Pages : ????? + 896}
 
@@ -29,7 +30,7 @@
 \vfill
 
 \noindent
-{\bf AthiRka neravu : kananxDa matutx saMsakxqqti ilAKe}
+{\bf AthiRka neravu : kananxDa matutx saMsakxqqti ilAKe, beMgaLUru}
 
 \bigskip
 
@@ -37,8 +38,11 @@
 {\bf\large shivapada ratanxkoVsha}\\[5pt]
 (viVrasheYva-liMgAyata samagarx pAriBASika padakoVsha) 
 
+\smallskip
+
 \noindent
 saMpAdane : saMpAdaka samiti,\\
+kAyaRnivARhaka saMpAdakaru : DA. naMdiVshf haMce\\
 parxkaTaNe : je{esf}{esf} \ garxMthamAle, meYsUru,\\[8pt]
 puTagaLu : {\rm ????? +} 896
 
