--- a/jss-anukramanike1.tex
+++ b/jss-anukramanike1.tex
@@ -4,6 +4,11 @@
 
 \begin{multicols}{3}
 {\small
+
+\noindent
+\qquad {\bf a}
+\smallskip
+
 \noindent
 {aMkurashiVla}, \pageref{aMkurashiVla}
 
@@ -867,6 +872,11 @@
 
 \noindent
 {aBayxMtarasAthxna}, \pageref{aBayxMtarasAthxna}
+
+\bigskip
+\noindent
+\qquad {\bf A}
+\smallskip
 
 \noindent
 {ABayxMtaraliMgadhAraNa}, \pageref{ABayxMtaraliMgadhAraNa}
@@ -1954,6 +1964,11 @@
 \noindent
 {Ahinxka}, \pageref{Ahinxka}
 
+\bigskip
+\noindent
+\qquad {\bf i}
+\smallskip
+
 \noindent
 {iMdirxya}, \pageref{iMdirxya}
 
@@ -2062,6 +2077,11 @@
 \noindent
 {ihaloVkaviVra}, \pageref{ihaloVkaviVra}
 
+\bigskip
+\noindent
+\qquad {\bf I}
+\smallskip
+
 \noindent
 {IDa/IDA/ILa}, \pageref{IDa/IDA/ILa}
 
@@ -2115,6 +2135,11 @@
 
 \noindent
 {ILana}, \pageref{ILana}
+
+\bigskip
+\noindent
+\qquad {\bf u}
+\smallskip
 
 \noindent
 {ukAra}, \pageref{ukAra}
@@ -2326,6 +2351,11 @@
 \noindent
 {uriliMga}, \pageref{uriliMga}
 
+\bigskip
+\noindent
+\qquad {\bf U}
+\smallskip
+
 \noindent
 {UdhavxRkuMDali}, \pageref{UdhavxRkuMDali}
 
@@ -2359,6 +2389,11 @@
 \noindent
 {UdhAvxRvasethx}, \pageref{UdhAvxRvasethx}
 
+\bigskip
+\noindent
+\qquad {\bf e}
+\smallskip
+
 \noindent
 {eMTu yoVga}, \pageref{eMTu yoVga}
 
@@ -2367,6 +2402,11 @@
 
 \noindent
 {eDe}, \pageref{eDe}
+
+\bigskip
+\noindent
+\qquad {\bf E}
+\smallskip
 
 \noindent
 {EkaBAjana}, \pageref{EkaBAjana}
@@ -2458,6 +2498,11 @@
 \noindent
 {ELavasethx}, \pageref{ELavasethx}
 
+\bigskip
+\noindent
+\qquad {\bf ai}
+\smallskip
+
 \noindent
 {aikayx}, \pageref{aikayx}
 
@@ -2488,6 +2533,11 @@
 \noindent
 {aivatetxraDu tatatxvX}, \pageref{aivatetxraDu tatatxvX}
 
+\bigskip
+\noindent
+\qquad {\bf o}
+\smallskip
+
 \noindent
 {oMbatutx bAgilu}, \pageref{oMbatutx bAgilu}
 
@@ -2499,6 +2549,11 @@
 
 \noindent
 {olavuliMgatirxvidha}, \pageref{olavuliMgatirxvidha}
+
+\bigskip
+\noindent
+\qquad {\bf O}
+\smallskip
 
 \noindent
 {OM (OMkAra)}, \pageref{OM (OMkAra)}
@@ -2518,6 +2573,11 @@
 \noindent
 {OM namaHshivAya}, \pageref{OM namaHshivAya}
 
+\bigskip
+\noindent
+\qquad {\bf au}
+\smallskip
+
 \noindent
 {aupaBoVgika}, \pageref{aupaBoVgika}
 
@@ -2526,6 +2586,11 @@
 
 \noindent
 {aupAsana (aginxja)}, \pageref{aupAsana (aginxja)}
+
+\bigskip
+\noindent
+\qquad {\bf ka}
+\smallskip
 
 \noindent
 {kaMThapAvaDa}, \pageref{kaMThapAvaDa}
@@ -3280,6 +3345,11 @@
 \noindent
 {kwmAyaR}, \pageref{kwmAyaR}
 
+\bigskip
+\noindent
+\qquad {\bf Ka}
+\smallskip
+
 \noindent
 {KaMDajAcnxna}, \pageref{KaMDajAcnxna}
 
@@ -3309,6 +3379,11 @@
 
 \noindent
 {KeVcariVmuderx}, \pageref{KeVcariVmuderx}
+
+\bigskip
+\noindent
+\qquad {\bf ga}
+\smallskip
 
 \noindent
 {gaMgevALuka}, \pageref{gaMgevALuka}
@@ -3661,6 +3736,11 @@
 \noindent
 {gwravAvadhAni}, \pageref{gwravAvadhAni}
 
+\bigskip
+\noindent
+\qquad {\bf Ga}
+\smallskip
+
 \noindent
 {GaMTAkaNaR}, \pageref{GaMTAkaNaR}
 
@@ -3717,6 +3797,11 @@
 
 \noindent
 {GuNAkaSxranAyxya}, \pageref{GuNAkaSxranAyxya}
+
+\bigskip
+\noindent
+\qquad {\bf ca}
+\smallskip
 
 \noindent
 {caMdarx}, \pageref{caMdarx}
@@ -4231,6 +4316,11 @@
 \noindent
 {cwSaSiTxvideyx}, \pageref{cwSaSiTxvideyx}
 
+\bigskip
+\noindent
+\qquad {\bf Ca}
+\smallskip
+
 \noindent
 {CatitxVsatatatxvX}, \pageref{CatitxVsatatatxvX}
 
@@ -4242,6 +4332,11 @@
 
 \noindent
 {CAyAjiVva}, \pageref{CAyAjiVva}
+
+\bigskip
+\noindent
+\qquad {\bf ja}
+\smallskip
 
 \noindent
 {jaMgama}, \pageref{jaMgama}
@@ -4827,6 +4922,11 @@
 
 \noindent
 {joyxVtiliRMgAnusaMdhAna}, \pageref{joyxVtiliRMgAnusaMdhAna}
+
+\bigskip
+\noindent
+\qquad {\bf ta}
+\smallskip
 
 \noindent
 {taMtarx}, \pageref{taMtarx}
@@ -5722,6 +5822,11 @@
 \noindent
 {totutxtana}, \pageref{totutxtana}
 
+\bigskip
+\noindent
+\qquad {\bf da}
+\smallskip
+
 \noindent
 {daMDa}, \pageref{daMDa}
 
@@ -6130,6 +6235,11 @@
 \noindent
 {devxYtAdevxYtamata}, \pageref{devxYtAdevxYtamata}
 
+\bigskip
+\noindent
+\qquad {\bf dha}
+\smallskip
+
 \noindent
 {dhanaMjaya}, \pageref{dhanaMjaya}
 
@@ -6219,6 +6329,11 @@
 
 \noindent
 {dhwti}, \pageref{dhwti}
+
+\bigskip
+\noindent
+\qquad {\bf na}
+\smallskip
 
 \noindent
 {naMdi}, \pageref{naMdi}
@@ -7119,6 +7234,11 @@
 
 \noindent
 {nwli}, \pageref{nwli}
+
+\bigskip
+\noindent
+\qquad {\bf pa}
+\smallskip
 
 \noindent
 {paMcakaMcuka}, \pageref{paMcakaMcuka}
@@ -8596,6 +8716,11 @@
 \noindent
 {pwSiTxkamaMtarx}, \pageref{pwSiTxkamaMtarx}
 
+\bigskip
+\noindent
+\qquad {\bf ba}
+\smallskip
+
 \noindent
 {baMdha}, \pageref{baMdha}
 
@@ -8832,6 +8957,11 @@
 
 \noindent
 {boVLu}, \pageref{boVLu}
+
+\bigskip
+\noindent
+\qquad {\bf Ba}
+\smallskip
 
 \noindent
 {Bakatx}, \pageref{Bakatx}
@@ -9369,6 +9499,11 @@
 
 \noindent
 {BwtikiVdiVkASx}, \pageref{BwtikiVdiVkASx}
+
+\bigskip
+\noindent
+\qquad {\bf ma}
+\smallskip
 
 \noindent
 {maMDala}, \pageref{maMDala}
@@ -10219,6 +10354,11 @@
 \noindent
 {mwnAMtamuderx}, \pageref{mwnAMtamuderx}
 
+\bigskip
+\noindent
+\qquad {\bf ya}
+\smallskip
+
 \noindent
 {yaMtarxvAhaka}, \pageref{yaMtarxvAhaka}
 
@@ -10305,6 +10445,11 @@
 
 \noindent
 {yoVgirATf}, \pageref{yoVgirATf}
+
+\bigskip
+\noindent
+\qquad {\bf ra}
+\smallskip
 
 \noindent
 {rakeSx}, \pageref{rakeSx}
@@ -10458,6 +10603,11 @@
 
 \noindent
 {reVNukapiVTha}, \pageref{reVNukapiVTha}
+
+\bigskip
+\noindent
+\qquad {\bf la}
+\smallskip
 
 \noindent
 {laMbaka}, \pageref{laMbaka}
@@ -11041,6 +11191,11 @@
 \noindent
 {loVkAginxjaBasamx}, \pageref{loVkAginxjaBasamx}
 
+\bigskip
+\noindent
+\qquad {\bf va}
+\smallskip
+
 \noindent
 {vaMdanaBakitx}, \pageref{vaMdanaBakitx}
 
@@ -11571,6 +11726,11 @@
 
 \noindent
 {voyxVmAsatxrXmaMtarx}, \pageref{voyxVmAsatxrXmaMtarx}
+
+\bigskip
+\noindent
+\qquad {\bf sha}
+\smallskip
 
 \noindent
 {shaMKini}, \pageref{shaMKini}
@@ -12403,6 +12563,11 @@
 \noindent
 {shwrxtasheYva}, \pageref{shwrxtasheYva}
 
+\bigskip
+\noindent
+\qquad {\bf Sa}
+\smallskip
+
 \noindent
 {SaTasxmAmxjaRne}, \pageref{SaTasxmAmxjaRne}
 
@@ -12729,6 +12894,11 @@
 
 \noindent
 {SoVDashoVpacAra}, \pageref{SoVDashoVpacAra}
+
+\bigskip
+\noindent
+\qquad {\bf sa}
+\smallskip
 
 \noindent
 {saMkara}, \pageref{saMkara}
@@ -13978,6 +14148,11 @@
 \noindent
 {swKayxparxNava}, \pageref{swKayxparxNava}
 
+\bigskip
+\noindent
+\qquad {\bf ha}
+\smallskip
+
 \noindent
 {haMsa}, \pageref{haMsa}
 
@@ -14078,7 +14253,7 @@
 
 \noindent
 \begin{center}
-{\Large\bfseries hecucxvari pAriBASika padagaLa anukarxmaNike}
+{\Large\bfseries hecucxvari padagaLu}
 \end{center}
 \medskip
 
