--- a/nivedane.tex
+++ b/nivedane.tex
@@ -35,23 +35,23 @@ I hinenxleyalilx BAratada oMdu parxmuKa dhamaRvAda viVrasheYva-liMgAyatada tAtit
 
 \medskip
 
-vacanapitAmaha Pa.gu. haLakaTiTxyavaru \textbf{1943 shivAnuBava shabadxkoVsha}da mUlaka viVrasheYva pAriBASika saMgatigaLanunx vivarisuva kelasavanunx pArxraMBisidaru. anaMtaradalilx kANisikoMDa mahatavxda viVrasheYva pAriBASika padakoVshaveMdare DA. esf.\break vidAyxshaMkararavaru basava samitige saMpAdisikoTaTx \textbf{viVrasheYva pAriBASika padakoVsha} hAgU eM.eM. kalabugiRyavara parxdhAna saMpAdakatavx\-dalilx, kananxDa matutx saMsakxqqti ilAKeyu parxkaTisida samagarx vacana saMpuTagaLa koneya saMpuTavAda \textbf{vacana pariBASA\-koVsha}. I saMpuTagaLanunx omemx DA. enf.ji. mahAdeVvapapxnavaru matotxmemx DA. esf. vidAyxshaMkararavaru saMpAdisidAdxre. basava samitiya viVrasheYva pAriBASika padakoVshavu vacana hAgU kananxDa viVrasheYva kAvayxgaLanunx oLagoMDu racitavAgidadxre, vacana pariBASAkoVshadalilx keVvala vacanasaMbaMdhi pAriBASika padagaLanunx mAtarx dAKalisalAgide. I madheyx DA. jayashirxV daMDeyavaru \textbf{beDagina vacana pariBASA koVsha}vanunx racisidAdxre. jeesfesf garxMthamAleyiMda saMsakxqqta BASeya viVrasheYva pAriBASika padakoVsha garxMthavanunx DA. eM. shivakumArasAvxmi, DA. si. shivakumArasAvxmi hAgU DA. parxBusAvxmi, vidAvxnf DA. parxBuliMga hebAbxrf, vidAvxnf ecf.vi. nAgarAjarAvf, porx. Ti.Arf. mahadeVvayayx, vidAvxnf ke.si. gurumalalxdeVvaru, shirxVmati esf. gwri ivarugaLu saMpAdi\-sidAdxre. I elalx niGaMTugaLu oMdoMdu shAKeya pariBASeyanunx mAtarx dAKalisidudxvu. hiVgAgi samagarxvU visatxqqtavU Ada oMdu viVrasheYva pAriBASika niGaMTina avashayxkate idedxV itutx. idanunx pUreYsuva niTiTxnalilx Igina \textbf{samagarx viVrasheYva - liMgAyata pAriBASika padagaLanunx oLagoMDa shivapada ratanxkoVsha} niGaMTu rUpisalu ciMtisalAyitu.
+vacanapitAmaha Pa.gu. haLakaTiTxyavaru \textbf{1943 shivAnuBava shabadxkoVsha}da mUlaka viVrasheYva pAriBASika saMgatigaLanunx vivarisuva kelasavanunx pArxraMBisidaru. anaMtaradalilx kANisikoMDa mahatavxda viVrasheYva pAriBASika padakoVshaveMdare DA. esf.\break vidAyxshaMkararavaru basava samitige saMpAdisikoTaTx \textbf{viVrasheYva pAriBASika padakoVsha} hAgU eM.eM. kalabugiRyavara parxdhAna saMpAdakatavx\-dalilx, kananxDa matutx saMsakxqqti ilAKeyu parxkaTisida samagarx vacana saMpuTagaLa koneya saMpuTavAda \textbf{vacana pariBASA\-koVsha}. I saMpuTagaLanunx DA. esf. vidAyxshaMkararavaru saMpAdisidAdxre. basava samitiya viVrasheYva pAriBASika padakoVshavu vacana hAgU kananxDa viVrasheYva kAvayxgaLanunx oLagoMDu racitavAgidadxre, vacana pariBASAkoVshadalilx keVvala vacanasaMbaMdhi pAriBASika padagaLanunx mAtarx dAKalisalAgide. I madheyx DA. jayashirxV daMDeyavaru \textbf{beDagina vacana pariBASA koVsha}vanunx racisidAdxre. jeesfesf garxMthamAleyiMda saMsakxqqta BASeya viVrasheYva pAriBASika padakoVsha garxMthavanunx DA. eM. shivakumArasAvxmi, DA. si. shivakumArasAvxmi hAgU DA. parxBusAvxmi, vidAvxnf DA. parxBuliMga hebAbxrf, vidAvxnf ecf.vi. nAgarAjarAvf, porx. Ti.Arf. mahadeVvayayx, vidAvxnf ke.si. gurumalalxdeVvaru, shirxVmati esf. gwri ivarugaLu saMpAdi\-sidAdxre. I elalx niGaMTugaLu oMdoMdu shAKeya pariBASeyanunx mAtarx dAKalisidudxvu. hiVgAgi samagarxvU visatxqqtavU Ada oMdu viVrasheYva pAriBASika niGaMTina avashayxkate idedxV itutx. idanunx pUreYsuva niTiTxnalilx Igina \textbf{samagarx viVrasheYva - liMgAyata pAriBASika padagaLanunx oLagoMDa shivapada ratanxkoVsha} niGaMTu rUpisalu ciMtisalAyitu.
 
 \medskip
 
-I \textbf{shivapada ratanxkoVsha} niGaMTu rUpugoMDadedxV oMdu itihAsa. jeesfesf garxMthamAleyiMda parxkaTavAda \textbf{\hbox{viVrasheYva} pAriBASika padakoVshaH} saMsakxqqta garxMthada loVkApaRNe kAyaRkarxmavu paramapUjayx \textbf{jagadugxru shirxV shivarAtirx deVshikeVMdarx mahA\-sAvxmi}gaLavara divayx sAninxdhayxdalilx, pUjayx shirxV sidedhxVshavxra mahAsAvxmigaLavara samumxKadalilx beMgaLUrina jayanagarada jeesfesf saBAMgaNadalilx 2011ralilx neraveVritu. aMdina kananxDa matutx saMsakxqqti sacivarAda shirxV goVviMda \hbox{kArajoVLa}, hiriya vidAvxMsarAda ji. veMkaTasubabxyayxnavaru, porx. malelxVpuraM ji. veMkaTeVshf, jayatiVthARcArayx maLagiyavaru Agamisidadxru. kaqti biDugaDeyAgutitxdadx A saMdaBaRdalilx saBeyalilx upasithxtaridadx esf.eM. vaqSaBeVMdarx\-sAvxmi, ji.esf. sidadhx\-liMgayayx modalAda vidAvxMsaru I mahatavxda garxMthavanunx kananxDadalilxyU taraleVbeVkeMdu otAtxyisidaru. garxMthavanunx loVkApaRNe mADida ji. veMkaTasubabxyayxnavaru \hbox{vidAvxMsara} I mAtige dhanigUDisidaru. saciva shirxV goVviMda kArajoVLaravaru I saMsakxqqta garxMthavanunx kananxDakekx anuvAdisalu kananxDa matutx saMsakxqqti ilAKeyiMda anudAna niVDuvudAgi sathxLadalilxyeV GoVSi\-sidaru. idu avara saMsakxqqtiya bagegina pirxVtiyanunx toVrisutatxde. samAraMBa mugida kelaveV dinagaLalilx sakARrakekx parxsAtxvane salilxsida kUDale tamamx mAtinaMte, anudAnavanunx maMjUru mADidaru. I porxVtAsxhada PalavAgi saMsakxqqta pAriBASika padakoVsha garxMthavanunx kananxDakekx anuvAdisalu pArxraMBisalAyitu.
+I \textbf{shivapada ratanxkoVsha} niGaMTu rUpugoMDadedxV oMdu itihAsa. jeesfesf garxMthamAleyiMda parxkaTavAda \textbf{\hbox{viVrasheYva} pAriBASika padakoVshaH} saMsakxqqta garxMthada loVkApaRNe kAyaRkarxmavu paramapUjayx \textbf{jagadugxru shirxV shivarAtirx deVshikeVMdarx mahA\-sAvxmi}gaLavara divayx sAninxdhayxdalilx, pUjayx shirxV sidedhxVshavxra mahAsAvxmigaLavara samumxKadalilx beMgaLUrina jayanagarada jeesfesf saBAMgaNadalilx 2011ralilx neraveVritu. aMdina kananxDa matutx saMsakxqqti sacivarAda shirxV goVviMda \hbox{kArajoVLa}, hiriya vidAvxMsarAda DA. ji. veMkaTasubabxyayxnavaru, porx. malelxVpuraM ji. veMkaTeVshf, porx. jayatiVthARcArayx maLagiyavaru Agamisidadxru. kaqti biDugaDeyAgutitxdadx A saMdaBaRdalilx saBeyalilx upasithxtaridadx DA. esf.eM. vaqSaBeVMdarx\-sAvxmi, porx. ji.esf. sidadhx\-liMgayayx modalAda vidAvxMsaru I mahatavxda garxMthavanunx kananxDadalilxyU taraleVbeVkeMdu otAtxyisidaru. garxMthavanunx loVkApaRNe mADida DA. ji. veMkaTasubabxyayxnavaru \hbox{vidAvxMsara} I mAtige dhanigUDisidaru. saciva shirxV goVviMda kArajoVLaravaru I saMsakxqqta garxMthavanunx kananxDakekx anuvAdisalu kananxDa matutx saMsakxqqti ilAKeyiMda anudAna niVDuvudAgi sathxLadalilxyeV GoVSi\-sidaru. idu avara saMsakxqqtiya bagegina pirxVtiyanunx toVrisutatxde. samAraMBa mugida kelaveV dinagaLalilx sakARrakekx parxsAtxvane salilxsida kUDale tamamx mAtinaMte, anudAnavanunx maMjUru mADidaru. I porxVtAsxhada PalavAgi saMsakxqqta pAriBASika padakoVsha garxMthavanunx kananxDakekx anuvAdisalu pArxraMBisalAyitu.
 
 \medskip
 
-I viSayavanunx baLika paramapUjayx jagadugxru shirxV shivarAtirx deVshikeVMdarx mahAsAvxmigaLavaru, vijayapurada jAcnxna\-yoVgAsharxmada pUjayx shirxV sidedhxVshavxra mahAsAvxmigaLoMdige  pArxsaMgikavAgi parxsAtxvisidAga avaru saMsakxqqta hAgU kananxDa viVrasheYva shAsatxrX garxMthagaLu, kAvayxgaLu hAgU vacanagaLanenxlAlx oLagoMDaMte samagarx pAriBASika padakoVsha racaneyAgabeVkAdudu agatayxveMdu  aBipArxyapaTaTxru. I viSayavanunx visatxqqtavAgi caciRsuva saluvAgi pUjayx sidedhxVshavxra mahAsAvxmigaLavaru sutUtxru shirxVkeSxVtarxkekx 2013ralilx Agamisida saMdaBaRdalilx niGaMTu pariNatara saBeyanunx EpaRDisalAgitutx. A saBeyalilx imamxDi shivabasava sAvxmigaLu, ecf. gaMgAdharanf, esf. naMjuMDayayx, enf. \hbox{basavArAdhayx}, Ti.vi. veMkaTAcala shAsitxrXV, ji.esf. sidadhxliMgayayx, go.ru. cananxbasapapx, esf. vidAyxshaMkara, enf.esf. tArAnAtha, Ti.Arf. mahadeVvayayx, Arf. shivaNaNx, enf.ji. mahadeVvapapx, ecf.vi. nAgarAjarAvf, si. shivakumArasAvxmi, Arf.esf. pUNARnaMda muMtAdavaru BAgavahisidadxru.
+I viSayavanunx baLika paramapUjayx jagadugxru shirxV shivarAtirx deVshikeVMdarx mahAsAvxmigaLavaru, vijayapurada jAcnxna\-yoVgAsharxmada pUjayx shirxV sidedhxVshavxra mahAsAvxmigaLoMdige  pArxsaMgikavAgi parxsAtxvisidAga avaru saMsakxqqta hAgU kananxDa viVrasheYva shAsatxrX garxMthagaLu, kAvayxgaLu hAgU vacanagaLanenxlAlx oLagoMDaMte samagarx pAriBASika padakoVsha racaneyAgabeVkAdudu agatayxveMdu  aBipArxyapaTaTxru. I viSayavanunx visatxqqtavAgi caciRsuva saluvAgi pUjayx sidedhxVshavxra mahAsAvxmigaLavaru sutUtxru shirxVkeSxVtarxkekx 2013ralilx Agamisida saMdaBaRdalilx niGaMTu pariNatara saBeyanunx EpaRDisalAgitutx. A saBeyalilx imamxDi shivabasava sAvxmigaLu, ecf. gaMgAdharanf, porx. esf. naMjuMDayayx, shirxV enf. \hbox{basavArAdhayx}, DA. Ti.vi. veMkaTAcala shAsitxrXV, porx. ji.esf. sidadhxliMgayayx, DA. go.ru. cananxbasapapx, DA. esf. vidAyxshaMkara, DA. enf.esf. tArAnAtha, DA. Ti.Arf. mahadeVvayayx, shirxV Arf. shivaNaNx, DA. enf.ji. mahadeVvapapx, Da. ecf.vi. nAgarAjarAvf, DA. si. shivakumArasAvxmi, shirxV Arf.esf. pUNARnaMda muMtAdavaru BAgavahisidadxru.
 
 \medskip
 
-hiVge visAtxravAda caceR naDeda baLika niGaMTuvina pArxthamika kAyaR AraMBagoMDitu. modalige saMsakxqqta\-dalilx racita\-vAgidadx viVrasheYva pAriBASika padakoVshavanunx kananxDakekx BASAMtarisalu karxma keYgoLaLxlAyitu. idara saMpUNaR \hbox{hoNeyanunx} si. shivakumAra\-sAvxmiyavaru vahisikoMDaru. jotege haLeya niGaMTuvinalilx biTuTxhoVgirabahudAda mahatavxda saMsakxqqta garxMthagaLa pAriBASika padagaLanunx vidAvxMsarugaLa mUlaka saMgarxha mADisi, avugaLanUnx I BASAMtara kAyaRdalilx seVrisikoLaLxlu nidhaRrisalAyitu.
+hiVge visAtxravAda caceR naDeda baLika niGaMTuvina pArxthamika kAyaR AraMBagoMDitu. modalige saMsakxqqta\-dalilx racita\-vAgidadx viVrasheYva pAriBASika padakoVshavanunx kananxDakekx BASAMtarisalu karxma keYgoLaLxlAyitu. idara saMpUNaR \hbox{hoNeyanunx} DA. si. shivakumAra\-sAvxmiyavaru vahisikoMDaru. jotege haLeya niGaMTuvinalilx biTuTxhoVgirabahudAda mahatavxda saMsakxqqta garxMthagaLa pAriBASika padagaLanunx vidAvxMsarugaLa mUlaka saMgarxha mADisi, avugaLanUnx I BASAMtara kAyaRdalilx seVrisikoLaLxlu nidhaRrisalAyitu.
 
 \medskip
 
-kananxDada Ayekxya viSaya caceRge baMdAga halavu toDakugaLu edurAdavu. adaralilx I modaleV racitavAgidadx vacanagaLa pAriBASika padakoVshagaLiMda shabadxsaMgarxhakekx saMbaMdhisida toDaku kUDa oMdu. haLakaTiTxyavara shivAnuBavakoVsha, vacana pariBASA\-koVsha, basava samitiya viVrasheYva pAriBASika padakoVsha, jayashirxV daMDeyavara beDagina vacana pariBASA koVsha itAyxdi aneVka niGaMTugaLu kananxDadalilx racanegoMDidadxvu. parxsutxta niGaMTu racaneya saMdaBaRdalilx ivugaLa parAmashaRna kAyaR anivAyaRvAgitutx. Adare I garxMthagaLiMda neVravAgi eravalu paDeyuva badalu, vacana saMpuTagaLanunx vidAvxMsariMda twlanika\-vAgi parishiVlisi hosa padagaLanunx saMgarxhisi paDeyalu nidhaRrisalAyitu. adaraMte 14 jana vidAvxMsarige vacana saMpuTagaLanunx niVDi padasaMgarxhada kAyaRvanunx vahisalAyitu.
+kananxDada Ayekxya viSaya caceRge baMdAga halavu toDakugaLu edurAdavu. adaralilx I modaleV racitavAgidadx vacanagaLa pAriBASika padakoVshagaLiMda shabadxsaMgarxhakekx saMbaMdhisida toDaku kUDa oMdu. haLakaTiTxyavara shivAnuBavakoVsha, vacana pariBASA\-koVsha, basava samitiya viVrasheYva pAriBASika padakoVsha, DA. jayashirxV daMDeyavara beDagina vacana pariBASA koVsha itAyxdi aneVka niGaMTugaLu kananxDadalilx racanegoMDidadxvu. parxsutxta niGaMTu racaneya saMdaBaRdalilx ivugaLa parAmashaRna kAyaR anivAyaRvAgitutx. Adare I garxMthagaLiMda neVravAgi eravalu paDeyuva badalu, vacana saMpuTagaLanunx vidAvxMsariMda twlanika\-vAgi parishiVlisi hosa padagaLanunx saMgarxhisi paDeyalu nidhaRrisalAyitu. adaraMte 14 jana vidAvxMsarige vacana saMpuTagaLanunx niVDi padasaMgarxhada kAyaRvanunx vahisalAyitu.
 
 \medskip
 
@@ -71,7 +71,7 @@ padapaTiTxkeyanunx niVDi padasaMgarxha mADalu koVridAga adaralilx AyekxgoMDa pad
 
 \newpage
 
-I naDuve pUjayx shirxV sidedhxVshavxra mahAsAvxmigaLavaru pAriBASika padagaLanunx parishiVlisi aMtimavAgi pAriBASikavalalxda kelavu padagaLanunx keYbiTuTx uLidaMte aMtima padagaLanunx Ayekx mADikoTaTxru hAgU avara sUcaneyaMte saMsakxqqta pAriBASika padagaLige niSapxtitx\-yanunx niVDa\-beVkeMdu tiVmARnisi saMpAditavAgidadx elalx padagaLanUnx tumakUrina bi. rAjasheVKarayayxnavarige niSapxtitx racisi\-koDuvaMte niVDalAyitu. avaru  niSapxtitxgaLanunx dAKalisikoTaTxru. I niSapxtitxyanunx bahuteVka saMsakxqqta padagaLige mAtarx niVDa\-lAgide. 
+I naDuve pUjayx shirxV sidedhxVshavxra mahAsAvxmigaLavaru pAriBASika padagaLanunx parishiVlisi aMtimavAgi pAriBASikavalalxda kelavu padagaLanunx keYbiTuTx uLidaMte aMtima padagaLanunx Ayekx mADikoTaTxru hAgU avara sUcaneyaMte saMsakxqqta pAriBASika padagaLige niSapxtitx\-yanunx niVDa\-beVkeMdu tiVmARnisi saMpAditavAgidadx elalx padagaLanUnx tumakUrina DA. bi. rAjasheVKarayayxnavarige niSapxtitx racisi\-koDuvaMte niVDalAyitu. avaru  niSapxtitxgaLanunx dAKalisikoTaTxru. I niSapxtitxyanunx bahuteVka saMsakxqqta padagaLige mAtarx niVDa\-lAgide. 
 
 \medskip
 
@@ -83,12 +83,11 @@ idelalx Agi modala haMtada akaSxrajoVDaNeya kAyaR pArxraMBavAyitu parxyoVga BAga
 
 \medskip
 
-I kAyaRdalilx neravige baMdadudx ``vacana saMcaya DATfkAM'' aMtajARla. I aMtajARlavanunx O.elf. nAgaBUSaNa\-sAvxmi, vasudheVMdarx, ke. deVvarAju, ecf. pavitarx. ecf.elf. OMshivaparxkAshf ivarugaLu sidadhxmADidadx \hbox{aMtajARlada} neravanunx paDeyalAyitu. adara sahAyadiMda I savAlanunx dATalu nidhaRrisalAyitu. I kAyaRkAkxgi jeesfesf saMsethxya ji. gULapapxsAvxmi, Arf.esf. honanxsheTiTx, pi.esf. kumArf,  maMjunAtha, pi. parxBusAvxmi, pi.esf. sudiVpf, enf.emf. kaqSaNxpapx, ecf.emf. nAgaBUSaNa, emf.esf. naTarAjf, pi. gurupAdasAvxmi, ecf.pi. shirxVdhara muMtAda kananxDa adhAyxpakaru hAgU emf.esf. maMjunAthf, sidadhxrAju, ruderxVshf hAgU itare gaNakayaMtarx sahAyakara neravanunx paDeyalAyitu. I kAyaR mugidu matotxmemx akaSxra joVDaNe kAyaR naDedu \textbf{shivapada ratanxkoVsha}da karaDu sidadhxgoMDitu. idakAkxgi matetx kelavu tiMgaLugaLa samaya hiDiyitu. jotege saMsakxqqtada BAgagaLanunx ecf.vi. nAgarAjarAvfravaru tididxkoTaTxru. hiVge halavu haMtagaLanunx dATi konege saBAparxti sidadhxvAyitu.
+I kAyaRdalilx neravige baMdadudx ``vacana saMcaya DATfkAM'' aMtajARla. I aMtajARlavanunx DA. O.elf. nAgaBUSaNa\-sAvxmi, shirxV vasudheVMdarx, shirxV ecf.elf. OMshivaparxkAshf, shirxV ke. deVvarAju, shirxVmati ecf. pavitarx.  ivarugaLu sidadhxmADidadx \hbox{aMtajARlada} neravanunx paDeyalAyitu. adara sahAyadiMda I savAlanunx dATalu nidhaRrisalAyitu. I kAyaRkAkxgi jeesfesf saMsethxya shirxV ji. gULapapxsAvxmi, shirxV Arf.esf. honanxsheTiTx, shirxV pi.esf. kumArf,  shirxV maMjunAtha, shirxV pi. parxBusAvxmi, DA. pi.esf. sudiVpf, shirxV enf.emf. kaqSaNxpapx, shirxV ecf.emf. nAgaBUSaNa, shirxV emf.esf. naTarAjf, shirxV pi. gurupAdasAvxmi, shirxV ecf.pi. shirxVdhara muMtAda kananxDa adhAyxpakaru hAgU shirxV emf.esf. maMjunAthf, shirxV sidadhxrAju, shirxV ruderxVshf hAgU itare gaNakayaMtarx sahAyakara neravanunx paDeyalAyitu. I kAyaR mugidu matotxmemx akaSxra joVDaNe kAyaR naDedu \textbf{shivapada ratanxkoVsha}da karaDu sidadhxgoMDitu. idakAkxgi matetx kelavu tiMgaLugaLa samaya hiDiyitu. jotege saMsakxqqtada BAgagaLanunx shirxV ecf.vi. nAgarAjarAvfravaru tididxkoTaTxru. hiVge halavu haMtagaLanunx dATi konege saBAparxti sidadhxvAyitu.
 
 \medskip
 
-I naDuve samitiya sadasayxrAgidadx enf. basavArAdhayx hAgU esf. vidAyxshaMkarf, esf, naMjuMDayayxnavaru vidhivasharAdaru. avara anupa\-sithxti elalx saBegaLalUlx bahaLavAgi kADitu. aMtimavAgi ji.esf. sidadxliMgayayx, Ti.vi. veMkaTAcala shAsitxrXV,  ecf.vi.\break nAgarAjarAvf, enf.esf. tArAnAtha, si. shivakumArasAvxmi, Arf.esf. pUNARnaMda, naMdiVshf haMceravaru\-gaLanunx oLagoMDa saMpAdaka samitiyu 40kUkx hecucx saBegaLanunx naDesi saBAparxtiyanunx parishiVlisi, muKayx ulelxVKagaLanunx athaR, niSapxtitxgaLanunx, athaRcACxye, ulelxVKagaLanunx kUlaMkaSavAgi gamanisi niGaMTuvige oMdu sapxSaTx rUpavanunx niVDitu. hiVge aMtimavAgi niGaMTu sidadhxvAyitu.
-
+I naDuve samitiya sadasayxrAgidadx shirxV enf. basavArAdhayx hAgU DA. esf. vidAyxshaMkarf, porx. esf, naMjuMDayayxnavaru vidhivasharAdaru. avara anupa\-sithxti elalx saBegaLalUlx bahaLavAgi kADitu. aMtimavAgi porx. ji.esf. sidadxliMgayayx, DA. Ti.vi. veMkaTAcala shAsitxrXV,  DA. ecf.vi.\break nAgarAjarAvf, DA. enf.esf. tArAnAtha, DA. si. shivakumArasAvxmi, shirxV. Arf.esf. pUNARnaMda, DA. naMdiVshf haMceravaru\-gaLanunx oLagoMDa saMpAdaka samitiyu 40kUkx hecucx saBegaLanunx naDesi saBAparxtiyanunx parishiVlisi, muKayx ulelxVKagaLanunx athaR, niSapxtitxgaLanunx, athaRcACxye, ulelxVKagaLanunx kUlaMkaSavAgi gamanisi niGaMTuvige oMdu sapxSaTx rUpavanunx niVDitu. I saMdaBaRdalilx je{esf}{esf} mahA vidAyxpiVThada shirxV basavaNaNxnavaru hAgU meYsUru vishavxvidAyxnilayada parxsArAMgada nivaqtatx nwkararAda shirxVmati kamalamamxnavaru karaDu tidudxvalilx mADida sahAya bahu doDaDxdu. hiVge aMtimavAgi niGaMTu sidadhxvAyitu.
 
 
 \medskip
@@ -255,15 +254,15 @@ I garxMthakekx beVkAda dAshaRnikateyanunx, tAtitxvXka savxrUpavanunx niVDidavaru
 
 \medskip
 
-I pAriBASika garxMtha racane sArataH oMdu vidavxtetxya kAyaR. idu eSuTx sharxmayukatxvoV aSeTxV veYjAcnxnikavAgi racita\-vAgide. idu I rUpavanunx taLeyalu kAraNarAda vidAvxMsaru hAgU saMpAdaka maMDaLiya sadasayxrugaLAda ji.esf.\break sidadhxliMgayayx, Ti.vi. veMkaTAcala shAsitxrXV, enf.esf. tArAnAtha, ecf.vi. nAgarAjarAvf hAgU saMsakxqqta viVrasheYva pAri\-BASika padakoVshavanunx kananxDakekx anuvAdisikoTuTx I yoVjanege adhikaqta cAlane niVDida si. shivakumArasAvxmi, kAyaRnivARhaka\break saMpAdakaroMdige niraMtaravAgi sahakarisutatx, parxti haMtadalUlx karaDu parxtiyanunx visheVSavAgi parishiVlisikoTaTx Arf.esf. pUNARnaMda ivarelalxra seVveyanunx kaqtajacnxteyiMda samxrisutetxVve. niGaMTuvina kAyaRdalilx I elalx mahaniVyara pAlogxLuLxvike niGaMTuvige oMdu Ganate taMdu\-koTiTxde. ivarelalxrigU haqtUpxvaRka kaqtajacnxtegaLu.
+I pAriBASika garxMtha racane sArataH oMdu vidavxtetxya kAyaR. idu eSuTx sharxmayukatxvoV aSeTxV veYjAcnxnikavAgi racita\-vAgide. idu I rUpavanunx taLeyalu kAraNarAda vidAvxMsaru hAgU saMpAdaka maMDaLiya sadasayxrugaLAda porx. ji.esf.\break sidadhxliMgayayx, DA. Ti.vi. veMkaTAcala shAsitxrXV, DA. enf.esf. tArAnAtha, DA. ecf.vi. nAgarAjarAvf hAgU saMsakxqqta viVrasheYva pAri\-BASika padakoVshavanunx kananxDakekx anuvAdisikoTuTx I yoVjanege adhikaqta cAlane niVDida DA. si. shivakumArasAvxmi, kAyaRnivARhaka\break saMpAdakaroMdige niraMtaravAgi sahakarisutatx, parxti haMtadalUlx karaDu parxtiyanunx visheVSavAgi parishiVlisikoTaTx shirxV Arf.esf. pUNARnaMda ivarelalxra seVveyanunx kaqtajacnxteyiMda samxrisutetxVve. niGaMTuvina kAyaRdalilx I elalx mahaniVyara pAlogxLuLxvike niGaMTuvige oMdu Ganate taMdu\-koTiTxde. ivarelalxrigU haqtUpxvaRka kaqtajacnxtegaLu.
 
 \medskip
 
-I niGaMTuvina kAyaRdalilx namage AraMBadalilx neravAda hiriya vidAvxMsaru, niGaMTu tajacnxru Ada matutx Iga namomxMdi\-gilalxda imamxDi shivabasava sAvxmigaLu, ecf. gaMgAdharanf, enf. basavArAdhayx, esf. vidAyxshaMkara hAgU esf. naMjuMDayayxnavarugaLanunx manaHpUvaRkavAgi neneyutetxVve.
+I niGaMTuvina kAyaRdalilx namage AraMBadalilx neravAda hiriya vidAvxMsaru, niGaMTu tajacnxru Ada matutx Iga namomxMdi\-gilalxda imamxDi shivabasava sAvxmigaLu, ecf. gaMgAdharanf, shirxV enf. basavArAdhayx, DA. esf. vidAyxshaMkara hAgU porx. esf. naMjuMDayayxnavarugaLanunx manaHpUvaRkavAgi neneyutetxVve.
 
 \medskip
 
-I garxMtha rUpagoLuLxvalilx sahakarisida parxkaTaNa viBAgada hiMdina nideVRshaka ke.si. shivapapxnavarige, Igina nideVRshaka morabada malilxkAjuRna, Ti.pi. parxBusAvxmiyavarige matutx yoVjaneya sahAyaka nagaleR shivakumArfravarige kaqtajacnxtegaLu. I \hbox{yoVjaneyu} acucxkaTATxgi oDamUDalu kAraNarAdavaru shirxVraMga DijiTelf sAPfTxveVrf TekAnxlajisf perxYveVTf limiTeDf kaMpani\-yavaru; adara muKayxsathxrAda yoVgAnaMda, ajuRnf kashayxpf, shivashaMkarfravara eDebiDada sahakArakekx dhanayxvAdagaLu. aneVka goMdalagaLanunx bageharisi nAvu niVDida aneVka toMdaregaLanunx sahisikoMDu, beVsaragoLaLxde 15kUkx hecucx bAri tidudxpaDigaLanunx aLavaDisi, I niGaMTuvina kAyaRvanunx tALemxyiMda mADikoTaTx rAGaveVMdarx parxsAdf matutx parxtiBaravarigU tuMbu haqdayada kaqtajacnxtegaLu. garxMthakekx muKapuTavanunx racisikoTaTx maMjunAthfravarige, shirxVmaThada kAyakabaMdhugaLige vaMdanegaLu. 
+I garxMtha rUpagoLuLxvalilx sahakarisida parxkaTaNa viBAgada hiMdina nideVRshakashirxV ke.si. shivapapxnavarige, Igina nideVRshaka porx. morabada malilxkAjuRna, shirxV Ti.pi. parxBusAvxmiyavarige matutx yoVjaneya sahAyaka shirxV nagaleR shivakumArfravarige kaqtajacnxtegaLu. I \hbox{yoVjaneyu} acucxkaTATxgi oDamUDalu kAraNarAdavaru shirxVraMga DijiTelf sAPfTxveVrf TekAnxlajisf perxYveVTf limiTeDf kaMpani\-yavaru; adara muKayxsathxrAda porx. si.esf. yoVgAnaMda, shirxV ajuRnf kashayxpf, shirxV shivashaMkarfravara eDebiDada sahakArakekx dhanayxvAdagaLu. aneVka goMdalagaLanunx bageharisi nAvu niVDida aneVka toMdaregaLanunx sahisikoMDu, beVsaragoLaLxde 15kUkx hecucx bAri tidudxpaDigaLanunx aLavaDisi, I niGaMTuvina kAyaRvanunx tALemxyiMda mADikoTaTx shirxV rAGaveVMdarx parxsAdf matutx shirxVmati parxtiBAravarigU tuMbu haqdayada kaqtajacnxtegaLu. garxMthakekx muKapuTavanunx racisikoTaTx maMjunAthfravarige, shirxVmaThada kAyakabaMdhugaLige vaMdanegaLu. 
 
 \medskip
 
