--- a/shubhasandesha.tex
+++ b/shubhasandesha.tex
@@ -22,7 +22,7 @@ pArxraMBadalilx jeesfesf garxMthamAleyu parxkaTisidadx saMsakxqqta BASeya viVras
 
 \medskip
 
-saMpAdaka maMDaLiyu aviratavAgi sharxmisi I niGaMTanunx rUpiside. saMpAdaka maMDaLiya sharxma ililx sAthaRkagoMDide. DA. naMdiVshf haMce saMpUNaR javAbAdxriyanunx pArxraMBadiMdalU nivaRhisidAdxre. garxMthagaLa saMgarxhaNe, padagaLa saMgarxha, padagaLa saMkalana, karaDuparxtiya sidadhxte - hiVge niGaMTu racaneya elalx haMtagaLalUlx kaThiNa parisharxma hAkidAdxre. I sharxmadAyaka kelasavanunx sharxdedhxyiMda mADidAdxre. 
+saMpAdaka maMDaLiyu aviratavAgi sharxmisi I niGaMTanunx rUpiside. adara sharxma ililx sAthaRkagoMDide. DA. naMdiVshf haMce saMpUNaR javAbAdxriyanunx pArxraMBadiMdalU nivaRhisidAdxre. garxMthagaLa saMgarxhaNe, padagaLa saMgarxha, padagaLa saMkalana, karaDuparxtiya sidadhxte - hiVge niGaMTu racaneya elalx haMtagaLalUlx kaThiNa parisharxma hAkidAdxre. I sharxmadAyaka kelasavanunx sharxdedhxyiMda mADidAdxre. 
 \medskip
 
 I yoVjanege AthiRka neravu niVDida kananxDa matutx saMsakxqqti ilAKegU, anudAna niVDida aMdina sacivaru hAgU iMdina upamuKayxmaMtirxgaLu Ada shirxV goVviMda kArajoVLa avarige oLitanunx AshisutetxVve. I garxMthavu elalxrigU doretu, vacanagaLa, viVrasheYva kAvayxgaLa vasutxniSaThx adhayxyanakekx neravAgaleMdu hAreYsutetxVve.
