--- a/tex-for-print/anubandha-2.tex
+++ b/tex-for-print/anubandha-2.tex
@@ -23,25 +23,25 @@
 \endfoot
 \endlastfoot
   & \\[-15pt]
-1. & aMbalimaTha, beMgaLUru\\
+1. & shirxV aMbalimaTha, beMgaLUru\\
 %\hline
 2. & shirxVmati anitA, beMgaLUru\\
-3. & shirxV  umApati esf., dAvaNagere\\
+3. & shirxV esf. umApati, dAvaNagere\\
 %\hline
 4. & shirxVmati uSAkiraNf, beMgaLUru\\
 %\hline
-5. & shirxVmati uSAdeVvi si.ji., meYsUru\\
+5. & shirxVmati si.ji. uSAdeVvi, meYsUru\\
 %\hline
 6. & shirxV karibasavarAjeVMdarx sAvxmiVji, baLALxri\\
 %\hline
 7. & shirxV guruliMgapapx dhabAle, akakxlakoVTe\\
-8. & shirxV caMdarxyayx bi.naM., meYsUru\\
-9. & shirxV  caMdarxsheVKarayayx pi.enf., tumakUru\\
+8. & shirxV bi.naM. caMdarxyayx, meYsUru\\
+9. & shirxV pi.enf. caMdarxsheVKarayayx, tumakUru\\
 %\hline
-10. & shirxV jagadiVshf bi.esf., beMgaLUru\\
-11. & shirxV jagalUru viVraBadarxyayxsAvxmi, meYsUru\\
+10. & shirxV bi.esf. jagadiVshf, beMgaLUru\\
+11. & shirxV jagalUru viVraBadarxyayx, meYsUru\\
 %\hline
-12. & shirxV nAgarAjf eM.ji., beMgaLUru\\
+12. & shirxV eM.ji. nAgarAjf, beMgaLUru\\
 %\hline
 13. &  shirxV nAgAbAyi bi buLALx, gulabagAR\\
 %\hline
@@ -49,12 +49,12 @@
 15. & shirxV parxBusAvxmi, meYsUru\\
 16. & shirxVmati pAvaRti pUjAra, kopapxLa\\
 %\hline
-17. & shirxV pUjAra vihx.ji., gulabagAR\\
+17. & shirxV vihx.ji. pUjAra, gulabagAR\\
 %\hline
-18. & shirxV  pUjAri bi.bi., solAlxpura\\
+18. & shirxV bi.bi. pUjAri, solAlxpura\\
 %\hline
-19. & shirxV  basavarAju koV.raM., tumakUru\\
-20. & bALapapx (shirxVmati) Arf.ePf.
+19. & shirxV koV.raM. basavarAju, tumakUru\\
+20. & shirxVmati Arf.ePf. bALapapx 
 \end{longtable}}
 \end{minipage}
 \qquad\quad
@@ -75,41 +75,41 @@
 \endfoot
 \endlastfoot
   & \\[-10pt]
-21. & shirxVmati maMjuLa bi.esf., tumakUru\\
+21. & shirxVmati bi.esf. maMjuLa, tumakUru\\
 %\hline
-22. & shirxV mahAdeVvayayx Ti.Arf., beMgaLUru\\
+22. & shirxV Ti.Arf. mahAdeVvayayx, beMgaLUru\\
 %\hline
-23. & shirxV  maheVshavxrayayx ecf.eM., dhAravADa\\
+23. & shirxV ecf.eM. maheVshavxrayayx, dhAravADa\\
 %\hline
 24. & shirxV raGushaMKa, BAtaMbArx, biVdarf\\
 %\hline
-25. & shirxV raviVMdarxnAtha ke., haMpi\\
+25. & shirxV ke. raviVMdarxnAtha, haMpi\\
 %\hline
 26. & shirxV rAjasheVKara icacxMgi, hukekxVri\\
 %\hline
-27. & shirxV  viVraBadarxyayx ecf.vi., tumakUru\\
+27. & shirxV ecf.vi. viVraBadarxyayx, tumakUru\\
 %\hline
-28. & shirxV  shAMtaviVrayayx hiV.ci., beMgaLUru\\
+28. & shirxV hiV.ci. shAMtaviVrayayx, beMgaLUru\\
 %\hline
 29. & shirxVmati shAMtA imArxpUra, dhAravADa\\
 %\hline
-30. & shirxV shirUra bi.vihx., hubabxLiLx\\
+30. & shirxV bi.vihx. shirUra, hubabxLiLx\\
 %\hline
-31. & shirxVmati shiVlAkumAri Di., meYsUru\\
+31. & shirxVmati Di. shiVlAkumAri, meYsUru\\
 %\hline
-32. & shirxVmati sheYlaja ecf.Ti., meYsUru\\
+32. & shirxVmati ecf.Ti. sheYlaja, meYsUru\\
 %\hline
-33. & shirxV saMgameVsha savadatitxmaTha, dhAravADa\\
+33. & shirxV saMgameVsha savadatitxmaTha\\
 %\hline
-34. & shirxVmati sarasavxti ke.ecf., meYsUru\\
+34. & shirxVmati ke.ecf. sarasavxti, meYsUru\\
 %\hline
-35. & shirxVmati saroVjamamxNiNx eM.si., meYsUru\\
+35. & shirxVmati eM.si. saroVjamamxNiNx, meYsUru\\
 %\hline
-36. & shirxVmati sidadhxgaMgamamx ke.Arf., beLagAM\\
+36. & shirxVmati ke.Arf. sidadhxgaMgamamx, beLagAM\\
 %\hline
-37. & shirxVmati sumaMgaLamamx esf., tumakUru\\
+37. & shirxVmati esf. sumaMgaLamamx, tumakUru\\
 %\hline
-38. & shirxVmati suvaNaR bi.bi., shivamogagx\\
+38. & shirxVmati bi.bi. suvaNaR, shivamogagx\\
 39. &  shirxV selavxpapx, beMgaLUru\\
 %\hline
 \end{longtable}}
