--- a/tex-for-print/anubandha-4.tex
+++ b/tex-for-print/anubandha-4.tex
@@ -36,7 +36,7 @@
 {\bf 13. I.u.} & IshAvAsoyxVpaniSatf &-& rAmakaqSaNx maTha & madArxsf, 1948\\
 {\bf 14. u.garx.} & upaniSatasxMgarxhaH &-& (saM.) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1980\\
 {\bf 15. u.ma.} & upaniSadAvxkayxmahAkoVshaH &-& shirxV gajAnana shaMBu sAdhale & cwKaMbA vidAyxBavana\newline vAraNAsi, 1990\\
-{\bf 16. u.vA.A.} & utatxra vAtUlAgamaH &-& & \\
+%{\bf 16. u.vA.A.} & utatxra vAtUlAgamaH &-& & \\
 {\bf 17. Qu.veV.} & QugevxVdaH &-& veYdika saMshoVdhana maMDali & puNe, 1941\\
 {\bf 18. ai.u.} & aitareVyoVpaniSatf &-& shirxVrAmakaqSANxsharxma & meYsUru, 1954 (nA.mu. 1984)\\
 {\bf 19. kaTha.u.} & kaThoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM.) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1980\\
@@ -56,15 +56,15 @@
 {\bf 31. caM.A.} & caMdarxjAcnxnAgamaH\newline (kirxyApAda-cayARpAda)\newline (kananxDAnuvAda sahita) &-& (saM.) DA. eM. shivakumArasAvxmi & viVrasheYva anusaMdhAna saMsAthxna\newline beMgaLUru, 2002\\
 {\bf 32. CAM.u.} & CAMdoVgoyxVpaniSatf &-& sAvxmi AdideVvAnaMda & shirxV rAmakaqSANxsharxma\newline meYsUru, 1995\\
 {\bf 33. jA.u.} & jAbAloVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1980\\
-{\bf 34. jAcnx.A.} & jAcnxnoVtatxrAgama &-& & \\
+%{\bf 34. jAcnx.A.} & jAcnxnoVtatxrAgama &-& & \\
 {\bf 35. ta.parxkA.} & tatatxvXparxkAshikA\,(aGoVrashivAcAyaR)\newline (BoVjakaqtavAyxKAyxna) &-& vidAvxnf bi. rAjasheVKarayayx & viVrasheYva anusaMdhAna saMsAthxna\newline beMgaLUru, 2010\\
 {\bf 36. ta.parxdiV.} & tatatxvXparxdiVpikA\newline (sidAdhxMta shiKAmaNi saMsakxqqta vAyxKeyx) &-& (saM) DA. ecf.pi. malelxVdeVvaru & pArxcayx vidAyx saMshoVdhanAlaya\newline meYsUru\\
 {\bf 37. teV.u.} & teVjoVbiMdUpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1980\\
 {\bf 38. teY.A.} & teYtitxriVyAraNayxkamf &-& AnaMdAsharxma siVriVsf & puNe\\
 {\bf 39. teY.u.} & teYtitxriVyoVpaniSatf &-& sAvxmi AdideVvAnaMda & shirxV rAmakaqSANxsharxma\newline meYsUru, 1993\\
 {\bf 40. da.u.} & dakiSxNAmUtuyxRpaniSatf\newline (upaniSatasxMgarxhaH) &-& paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1980\\
-{\bf 41. dAvx.shi.kirx.} & dAvxdashashivaliMgAcaRnakirxyA &-& & \\
-{\bf 42. diVkASx.parx.} & diVkASxparxkaraNamf &-& & \\
+%{\bf 41. dAvx.shi.kirx.} & dAvxdashashivaliMgAcaRnakirxyA &-& & \\
+%{\bf 42. diVkASx.parx.} & diVkASxparxkaraNamf &-& & \\
 {\bf 43. deVviV.A.} & deVviVkAloVtatxrAgamaH &-& (saM) varxjavalalxBa divxveVdi & sheYvaBAratiV shoVdha parxtiSAThxna, vArANasi\newline 2000\\
 {\bf 44. nAda.u.} & nAdabiMdUpaniSatf\newline (upaniSatasxMgarxhaH) &-& paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1980\\
 {\bf 45. nirukatx.} & nirukatxmf (yAsakx)\newline (niGaMTu sahita) &-& DA. lakaSxmXNa savxrUpa & moVtilAla banArasidAsf\newline dehali, 1984\\
@@ -100,9 +100,9 @@
 {\bf 75. maq.A.} & maqgeVMdArxgamaH\newline (shivAgama swraBAMtagaRta) &-& vidAvxnf eM.ji. naMjuMDArAdhayx & shirxV ja.ca.ni. adhayxyana piVTha, beMgaLUru\newline 1985\\
 {\bf 76. meYterxVya.} & meYterxVyuyxpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1980\\
 {\bf 77. yoV.A.} & yoVgajAgamaH &-& ulelxVKa - tatatxvXparxdiVpikA\newline (maritoVMTadAyaRra si.shi. vAyxKAyxna) & pArxcayx vidAyx saMshoVdhanAlaya \newline meYsUru, 1995\\
-{\bf 78. yoV.pA.} & yoVgapAvaLi &-& & \\
+%{\bf 78. yoV.pA.} & yoVgapAvaLi &-& & \\
 {\bf 79. yoV.su.} & yoVgasUtarxmf &-& rAmakaqSaNxmaTha & meYlApura\newline cenenxY, 2003\\
-{\bf 80. yoV.rA.u.} & yoVgarAjoVpaniSatf &-& & \\
+%{\bf 80. yoV.rA.u.} & yoVgarAjoVpaniSatf &-& & \\
 {\bf 81. yoVga.shi.} & yoVgashiKoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1980\\
 {\bf 82. ra.vaM.} & raGuvaMshamf (kAlidAsa) &-& niNaRyasAgara perxsf & muMbayi, 1932\\
 {\bf 83. ru.u.} & rudorxVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1980\\
@@ -123,19 +123,19 @@
 {\bf 98. viV.A.u.} & viVrAgamoVtatxramf (BAga-1) &-& (saM) DA. ecf.pi. malelxVdeVvaru & pArxcayx vidAyx saMshoVdhanAlaya\newline meYsUru, 1988\\
 {\bf 99. viV.A.kw.} & viVrasheYvAcAra kwsutxBaH\newline (mwnapapx paMDita) &-& hasatxparxti, saM. pi. 7352 & pArxcayx vidAyx saMshoVdhanAlaya\newline meYsUru\\
 {\bf 100. viV.A.caM.} & viVrasheYvAnaMdacaMdirxkA (vAdakAMDa)\newline (maritoVMTadAyaR) &-& (saM) shirxV soVmeVshavxra shAsitxrXV & shirxV jagadugxru gaMgAdhara saMsakxqqta mahApAThashAlA\newline hubabxLiLx, 1936\\
-{\bf 101. viV.A.ci} & viVrasheYvAcAraciMtAmaNiH &-& & \\
+%{\bf 101. viV.A.ci} & viVrasheYvAcAraciMtAmaNiH &-& & \\
 {\bf 102. viV.A.parx.} & viVrasheYvAcAraparxdiVpikA\newline (gurudeVva) &-& hasatxparxti saM. si.25 75/1 & pArxcayx vidAyx saMshoVdhanAlaya\newline meYsUru\\
 {\bf 103. viV.u.parx.} & viVrasheYvoVtakxSaRparxdiVpikA &-& hAlapaTaTxNada cenanxbasavasAvxmi & \hbox{shirxV duraduMDeVshavxra}\-maTha, araBAvi\newline beLagAvi jilelx\newline 1936\\
 {\bf 104. viV.dha.shi.} & viVrasheYvadhamaRshiroVmaNiH\newline (kananxDa vAyxKAyxnasahita) &-& (vAyx) eM. basavaliMga shAsitxrXV & viVrasheYvagarxMtha parxkAshikA garxMthAvali\newline meYsUru, 1908\\
-{\bf 105. viV.pu.} & viVraBadarxpurANamf &-& & \\
+%{\bf 105. viV.pu.} & viVraBadarxpurANamf &-& & \\
 {\bf 106. viV.parx.} & viVrasheYva parxdiVpikA &-& shirxV jayacAmarAjeVMdarx garxMthamAlA & meYsUru, 1918\\
-{\bf 107. viV.BA.} & viVrasheYvaBASayxmf &-& & \\
+%{\bf 107. viV.BA.} & viVrasheYvaBASayxmf &-& & \\
 {\bf 108. viVra.} & viVrAgama (kananxDa vAyxKAyxnasahita) &-& (saM) DA. ja.ca.ni. & shirxV jagadugxru paMcAcAyaR seVvA saMGa\newline gadaga-beTageVri\newline 1962\\
-{\bf 109. viVra.u.} & viVrAgamoVpaniSatf &-& & \\
+%{\bf 109. viVra.u.} & viVrAgamoVpaniSatf &-& & \\
 {\bf 110. viV.mA.saM.} & viVramAheVshavxrAcArasaMgarxha :\newline (BAga-1) (niVlakaMTha\newline nAganAthAcAyaR viracita) &-& (saM.) eM.esf. basavarAjayayx & pArxcayx vidAyx saMshoVdhanAlaya\newline meYsUru, 1991\\
 {\bf 111. viV.sheY.u.} & viVrasheYvoVpaniSatf &-& paM. kAshiVnAtha shAsitxrXV & paMcAcAyaR perxsf\newline meYsUru, 1981 (ELaneya Avaqtitx)\\
 {\bf 112. viV.sa.saM.} & viVrasheYva sadAcAra saMgarxha\newline (kananxDAnuvAda sahita) &-& (saM) paM. basavarAjashAsitxrXV pagaDadininxmaTha & shirxV jagadugxru garxMtha parxkAshikA garxMthAvali\newline mUrusAvira maTha\newline hubabxLiLx, 1964\\
-{\bf 113. veV.ciM.} & veVdAMtaciMtAmaNiH &-& & \\
+%{\bf 113. veV.ciM.} & veVdAMtaciMtAmaNiH &-& & \\
 {\bf 114. veV.sA.u.} & veVdAMtasAroVpaniSatf\newline (sheYvoVpaniSatasxMgarxhaH) &-& paM. kALiVnAtha shAsitxrXV & paMcAcAyaR perxsf\newline meYsUru, 1948 (divxtiVyAvaqtitx)\\
 {\bf 115. veV.sA.viV.caM.} & veVdAMtasAraviVrasheYvaciMtAmaNi\newline (utatxrakAMDa) - (niTUTxru naMja\-NAyaR) (marAThi anuvAda sahita) &-& (saM) shirxV malilxkAjuRna shAsitxrXV & shirxV datatxparxsAda siTxVmf perxsf\newline soVlApura, 1908\\
 {\bf 116. veY.shiva.} & veYdika shivapUjA vidhi &-& paM. kAshiVnAtha shAsitxrXV & paMcAcAyaR perxsf\newline meYsUru, 1980 (eMTaneya Avaqtitx)\\
@@ -151,7 +151,7 @@
 {\bf 126. shi.maM.} & shivAdevxYtamaMjariV \hbox{(savxparxBAnaMda shivAcAyaR)}\newline (kananxDa vAyxKAyxnasahita) &-& shirxV rAmAnuja ayayxMgArf & paMcAcAyaR perxsf\newline meYsUru, 1929\\
 {\bf 127. shi.mA.pU} & shivamAnasapUjAsotxVtarxmf\newline (shaMkarAcAyaR viracita) &-& veYdika shivapUjA vidhi, kAshiVnAtha shAsitxrXV & paMcAcAyaR perxsf\newline meYsUru, 1988\\
 {\bf 128. shi.yoV.parx.} & shivayoVgaparxdiVpikA\newline (\hbox{cenanxsadAshiva\-yoVgi})\newline (kananxDa TiVkAsahita) &-& TiVkAkAra: basavArAdhayx & kananxDa adhayxyana piVTha, kanARTaka vishavxvidAyxlaya\newline dhAravADa, 1976\\
-{\bf 129. shi.ra.} & shivarahasayxmf &-& &\\
+%{\bf 129. shi.ra.} & shivarahasayxmf &-& &\\
 {\bf 130. shiva.shi.} & shivAdhikayxshiKAmaNiH\newline (soVsale \hbox{reVvaNArAdhayx}) &-& (saM) shirxV soVmasheVKarasAvxmi & namaHshivAya maTha\newline meYsUru, 1929\\
 {\bf 131. shivA.sw.} & shivAgamaswraBamf  &-& (saM) vidAvxnf eM.ji. naMjuMDArAdhayx & shirxV ja.ca.ni. adhayxyana piVTha, beMgaLUru\newline 1985\\
 {\bf 132. shi.sU.} & shivasUtarxmf &-& kAshimxVra saMsakxqqta garxMthAvali & shirxVnagara, 1968\\
